fixed table spacing

--- a/src/app/pages/tables/bikes/bikes.component.scss
+++ b/src/app/pages/tables/bikes/bikes.component.scss
@@ -11,7 +11,9 @@
   }
   .table-container {
     flex: 1;
-    width: 100%;
+    width: auto;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
     max-width: 100%;
     overflow: auto;
     table {
